# zvec-node

./: .gitignore  .gitmodules  CMakeLists.txt  CONTRIBUTING.md  README.md  jest.config.json  package-lock.json  package.json  tsconfig.json  typedoc.json
.github/workflows/: publish.yml  test-published.yml  test-source.yml  test.yml
scripts/: build.js  bump-bindings.js  bump-main.js  bump-version.js  dev.js  install.js  merge_compile_commands.py  pack-local.js  patch-imports.js  publish-bindings.js  publish-main.js
src/: index.d.mts  index.d.ts  index.js  index.mjs
src/binding/: addon.cc  addon.h  async_workers.cc  async_workers.h  collection.cc  collection.h  config.cc  config.h  doc.cc  doc.h  params.cc  params.h  schema.cc  schema.h  types.cc  types.h
tests/: basic-test.js  collectionDDL.test.ts  collectionDML.test.ts  schema.test.ts
tests/collection/: columns.test.ts  lifecycle.test.ts
tests/data/: helpers.ts  operations.test.ts
